add time of creating and updating tasks, status tasks todo in-progress done

--- a/tasks.json
+++ b/tasks.json
@@ -1,1 +1,1 @@
-[{"Id":1,"Task":"buy milk"},{"Id":2,"Task":"buy chocolate"}]
+[{"Id":1,"Task":"buy cheeze","Status":"in-progress","Created":"2025-07-23 12:25:23","Updated":"2025-07-23 12:40:57"},{"Id":2,"Task":"buy meat","Status":"todo","Created":"2025-07-23 12:39:01","Updated":"2025-07-23 12:39:01"},{"Id":3,"Task":"buy apples","Status":"todo","Created":"2025-07-23 12:39:50","Updated":"2025-07-23 13:06:32"}]
